[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/assets/fonts/default_theme/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://game/rpg/CombatArea/SpawnPoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/rpg/CombatArea/RPGButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/assets/sprites/background/grasslands/grasslands.png" type="Texture" id=4]
[ext_resource path="res://game/assets/icons/purse.png" type="Texture" id=5]
[ext_resource path="res://game/assets/icons/cancel.png" type="Texture" id=6]
[ext_resource path="res://game/assets/icons/fire_scroll.png" type="Texture" id=7]
[ext_resource path="res://game/assets/icons/sword.png" type="Texture" id=8]
[ext_resource path="res://game/rpg/CombatArea/AIManager.gd" type="Script" id=9]
[ext_resource path="res://game/rpg/CombatArea/CombatPanel.gd" type="Script" id=10]
[ext_resource path="res://game/rpg/CombatArea/VisualFeedback.gd" type="Script" id=11]
[ext_resource path="res://game/rpg/CombatArea/CombatArea.gd" type="Script" id=12]
[ext_resource path="res://game/rpg/CombatArea/EndCombatPanel.gd" type="Script" id=13]
[ext_resource path="res://game/rpg/CombatArea/ExpBox.tscn" type="PackedScene" id=14]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="Animation" id=2]
resource_name = "show_n_hide"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}

[node name="CombatArea" type="Control" groups=[
"save",
]]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
use_theme_from_setting = true
node_id = "CombatArea"
spawn_parent_path = NodePath("YSort")

[node name="grasslands" type="Sprite" parent="."]
position = Vector2( 512.599, 299.763 )
scale = Vector2( 0.534915, 0.554392 )
texture = ExtResource( 4 )

[node name="YSort" type="YSort" parent="."]

[node name="Enemy0" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 325.539, 408.352 )

[node name="Enemy1" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 201.179, 408.352 )

[node name="Enemy2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 79.8164, 408.352 )

[node name="Hero0" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 701.614, 403.857 )

[node name="Hero1" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 827.472, 403.857 )

[node name="Hero2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 951.831, 403.857 )

[node name="CombatPanel" type="Panel" parent="."]
anchor_top = 0.867
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.200012
rect_min_size = Vector2( 0, 80 )
mouse_filter = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}
attack_button = ExtResource( 3 )
target_button = ExtResource( 3 )
skills_buttons_parent_path = NodePath("HBox/SkillsGrid")
targets_buttons_parent_path = NodePath("HBox/TargetsGrid")
ai_manager_path = NodePath("../AIManager")
visual_feedback_path = NodePath("../VisualFeedback")
timer_path = NodePath("../Timer")
end_combat_panel_path = NodePath("../EndCombatPanel")

[node name="HBox" type="HBoxContainer" parent="CombatPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillTypesGrid" type="GridContainer" parent="CombatPanel/HBox"]
margin_right = 268.0
margin_bottom = 80.0
size_flags_vertical = 3
columns = 3

[node name="Attack" type="Button" parent="CombatPanel/HBox/SkillTypesGrid"]
margin_right = 86.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Attack"
icon = ExtResource( 8 )

[node name="Magic" type="Button" parent="CombatPanel/HBox/SkillTypesGrid"]
margin_left = 90.0
margin_right = 173.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Magic"
icon = ExtResource( 7 )

[node name="Special" type="Button" parent="CombatPanel/HBox/SkillTypesGrid"]
margin_left = 177.0
margin_right = 268.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Special"
icon = ExtResource( 5 )

[node name="Defense" type="Button" parent="CombatPanel/HBox/SkillTypesGrid"]
margin_top = 42.0
margin_right = 86.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Defense"

[node name="Flee" type="Button" parent="CombatPanel/HBox/SkillTypesGrid"]
margin_left = 90.0
margin_top = 42.0
margin_right = 173.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Flee"
icon = ExtResource( 6 )

[node name="SkillsGrid" type="GridContainer" parent="CombatPanel/HBox"]
margin_left = 272.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="TargetsGrid" type="GridContainer" parent="CombatPanel/HBox"]
visible = false
margin_left = 650.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="AIManager" type="Node" parent="."]
script = ExtResource( 9 )
combat_panel_path = NodePath("../CombatPanel")
visual_feedback_path = NodePath("../VisualFeedback")
timer_path = NodePath("../Timer")
end_combat_panel_path = NodePath("../EndCombatPanel")

[node name="VisualFeedback" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.00174004
anchor_top = 0.313761
anchor_right = 1.00174
anchor_bottom = 0.313761
margin_bottom = 63.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] some one get hit[/center]"
text = " some one get hit"
scroll_active = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VisualFeedback"]
anims/show_n_hide = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EndCombatPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -143.0
margin_right = 203.5
margin_bottom = 143.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
win_txt = "Your Party Wins"
win_color = Color( 0.776471, 0.521569, 0.0352941, 1 )
lose_txt = "Your Party Lose"
lose_color = Color( 0.815686, 0.0431373, 0.0431373, 1 )
exp_box = ExtResource( 14 )
box_path = NodePath("VBoxContainer/VBoxContainer2")
label_path = NodePath("VBoxContainer/Label")

[node name="VBoxContainer" type="VBoxContainer" parent="EndCombatPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EndCombatPanel/VBoxContainer"]
margin_right = 407.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "Win/Lose"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="EndCombatPanel/VBoxContainer"]
margin_top = 64.0
margin_right = 407.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="EndCombatPanel/VBoxContainer"]
margin_left = 163.0
margin_top = 248.0
margin_right = 244.0
margin_bottom = 286.0
size_flags_horizontal = 4
text = "Close"
icon = ExtResource( 6 )
[connection signal="toggled" from="CombatPanel/HBox/SkillTypesGrid/Attack" to="CombatPanel" method="_on_Attack_toggled"]
[connection signal="toggled" from="CombatPanel/HBox/SkillTypesGrid/Magic" to="CombatPanel" method="_on_Magic_toggled"]
[connection signal="toggled" from="CombatPanel/HBox/SkillTypesGrid/Special" to="CombatPanel" method="_on_Special_toggled"]
[connection signal="pressed" from="CombatPanel/HBox/SkillTypesGrid/Defense" to="CombatPanel" method="_on_Defense_pressed"]
[connection signal="pressed" from="CombatPanel/HBox/SkillTypesGrid/Flee" to="CombatPanel" method="_on_Flee_pressed"]
